src/test/ui/associated-types/associated-types-project-from-hrtb-in-fn-body.nll.stderr
warning: not reporting region error due to nll
  --> $DIR/associated-types-project-from-hrtb-in-fn-body.rs:22:12
   |
LL |     let z: I::A = if cond { x } else { y };
   |            ^^^^

error: unsatisfied lifetime constraints
  --> $DIR/associated-types-project-from-hrtb-in-fn-body.rs:22:29
   |
LL | fn bar<'a, 'b, I : for<'x> Foo<&'x isize>>(
   |        --  -- lifetime `'b` defined here
   |        |
   |        lifetime `'a` defined here
...
LL |     let z: I::A = if cond { x } else { y };
   |                             ^ assignment requires that `'a` must outlive `'b`

error: unsatisfied lifetime constraints
  --> $DIR/associated-types-project-from-hrtb-in-fn-body.rs:22:40
   |
LL | fn bar<'a, 'b, I : for<'x> Foo<&'x isize>>(
   |        --  -- lifetime `'b` defined here
   |        |
   |        lifetime `'a` defined here
...
LL |     let z: I::A = if cond { x } else { y };
   |                                        ^ assignment requires that `'b` must outlive `'a`

error: aborting due to 2 previous errors

